[workspace]
members = [
    "root_io",
    "rusty_root_gui"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
thiserror = "1.0"
anyhow = "1.0"

# GUI dependencies
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
rfd = "0.15"

# Plotting
egui_plot = "0.28"