[package]
name = "root_io"
version = "0.1.0"
edition = "2021"
description = "A library for reading and analyzing CERN ROOT files"
authors = ["Kyle Lau"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"